FIND_PACKAGE (Boost REQUIRED COMPONENTS
	system
	filesystem
)

INCLUDE_DIRECTORIES (${Boost_INCLUDE_DIRS})

SET (TEST_LINK_LIBS
	${Boost_LIBRARIES}
	sqlitepp
)

# Macro to easily add tests based on test filename
MACRO (ADD_SQLITEPP_TEST TEST_FILENAME)
	GET_FILENAME_COMPONENT (TEST_NAME ${TEST_FILENAME} NAME_WE)
	ADD_EXECUTABLE (${TEST_NAME} ${TEST_FILENAME})
	TARGET_LINK_LIBRARIES (${TEST_NAME} ${TEST_LINK_LIBS})
	ADD_TEST (${TEST_NAME} ${TEST_NAME})
ENDMACRO (ADD_SQLITEPP_TEST)

ADD_SQLITEPP_TEST (database_tests.cpp)